# FATEDemo

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: api_reference.md
examples/: config.yaml  create_test_data.py  run_pipeline.py  upload_data.py
fate_secure_func/: __init__.py  secure_func.py  secure_func_guest.py  secure_func_host.py
fate_secure_func_client/: __init__.py  secure_func.py
fate_secure_func_client/component_define/: secure_func.yaml
